# placeholder_chat

./: -  .dockerignore  .gitignore  AGENTS.md  Cargo.toml  README.md  cookies.txt  docker-compose.dev-all.yml  docker-compose.dev-web.yml  docker-compose.h3.yml  docker-compose.prod.yml  docker-compose.yml  docker-dev-all.yml  docker-dev-web.yml  docker-dev.yml  docker-h3.yml  docker-prod.yml  package.json  pnpm-lock.yaml  tmp_head.txt  tmp_patch_routeprefetch.mjs  tmp_patch_routeprefetch.py  tmp_ps2.txt  tmp_test  traefik_cli.html
.clinerules/: backend_docs.md  frontend_docs.md
apps/desktop/: Cargo.toml  README.md  build.rs  tauri.conf.json
apps/desktop/src/: main.rs
apps/desktop/static/: index.html
apps/gateway/: Cargo.toml  admin.seed
apps/gateway/data/: db.redb  db.redb.bak
apps/gateway/src/: init.rs  main.rs  middleware.rs  state.rs
apps/gateway/src/routes/: admin.rs  auth.rs  dev.rs  logs.rs  mod.rs  push.rs  rooms.rs  root.rs  ws.rs
apps/lynx/: lynx.config.ts  package.json
apps/lynx/src/: App.css  App.tsx
apps/lynx/src/components/: Header.tsx
apps/lynx/src/pages/: About.tsx  Contact.tsx  Home.tsx  Login.tsx  Signup.tsx
apps/mobile/: Cargo.toml  lynx.tokens.css
apps/mobile/src/: main.rs  tokens.rs
apps/push-worker/: Cargo.toml
apps/push-worker/src/: main.rs
apps/web/: .biome.json  .biomeignore  .prettierignore  .ssg-routes.json  README.md  eslint.config.js  knip.json  package.json  panda.config.ts  playwright.config.ts  prettier.config.js  tailwind.config.cjs  tsconfig.json  vite.config.ts
apps/web/adapters/bun/: vite.config.ts
apps/web/adapters/static/: vite.config.ts
apps/web/apps/web/certs/: cert.pem  config.json  dev.pem  rootCA-key.pem  rootCA.pem
apps/web/certs/: .hosts
apps/web/docs/: htmx-daisyui-demo.md
apps/web/playwright-report/: index.html
apps/web/public/: debug-warn.js  manifest.json  offline.html  sw.js  theme-init.js  vt.css
apps/web/public/lottie/: demo.json
apps/web/scripts/: check-auth-debug.cjs  check-auth-debug.js  dev-nohmr.js  dev-with-env.js  docker-dev-proxy.cjs  docker-prod-proxy.cjs  launch-lynx.js  preview-https.js  preview-wait-dist.mjs  preview.express.cjs  serve-static.ts  ssg-route.mjs  ssg-watch-routes.mjs  wait-and-launch.js
apps/web/src/: entry.bun.ts  entry.dev.tsx  entry.service-worker.ts  entry.ssr.tsx  global.css  root.tsx
apps/web/src/components/: AuthWarmup.tsx  Avatar.tsx  BackButton.tsx  BottomNav.tsx  GlassNavBar.tsx  Hero.tsx  LanguageToggle.tsx  PreactCounterIsland.tsx  PreactStatsIsland.tsx  RoutePrefetch.tsx  ScrollProgress.tsx  ScrollReveals.tsx  StatsCard.tsx  ThemeToggle.tsx  TypeTitle.tsx  VTGlobal.tsx
apps/web/src/components/auth/: AuthCard.tsx  AuthHeader.tsx  useAuthPage.tsx
apps/web/src/components/integrations/: DaisyButtonsDemo.tsx  FakerDemo.tsx  GsapDemo.tsx  IconsDemo.tsx  LenisProvider.tsx  LottieDemo.tsx  MotionOneDemo.tsx  PandaDemo.tsx  PictureDemo.tsx  SmoothScrollProvider.tsx  UnpicDemo.tsx  (+1 more)
apps/web/src/content/: hero-messages.txt
apps/web/src/lib/: avatar-color.ts  cn.ts  csrf.ts  http.ts  log.ts  motion-qwik.ts  velvette.ts
apps/web/src/routes/: index.tsx  layout.tsx  plugin@auth.ts
apps/web/src/shims/: preact.rts.shim.mjs  preact.server.shim.mjs  undici.browser.mjs
apps/web/src/solid/: Island.tsx  ssr.ts
apps/web/src/types/: icons.d.ts  pwa-register.d.ts  raw.d.ts  react-compat.d.ts  unplugin-icons.d.ts  velvette.d.ts
apps/web/styled-system/: helpers.mjs  styles.css
apps/web/styled-system/css/: conditions.mjs  css.mjs
apps/web/styled-system/patterns/: aspect-ratio.mjs  bleed.mjs  box.d.ts  box.mjs  center.mjs  circle.mjs  container.d.ts  container.mjs  cq.mjs  divider.mjs  flex.mjs  float.mjs  grid-item.mjs  grid.mjs  hstack.mjs  link-overlay.d.ts  link-overlay.mjs  spacer.mjs  square.mjs  stack.mjs  visually-hidden.d.ts  visually-hidden.mjs  vstack.mjs  wrap.mjs
apps/web/styled-system/tokens/: index.mjs  tokens.d.ts
apps/web/styled-system/types/: composition.d.ts  conditions.d.ts  csstype.d.ts  prop-type.d.ts
apps/web/tests/: example.spec.ts
crates/auth/: Cargo.toml
crates/auth/src/: lib.rs  oauth.rs  webauthn.rs
crates/bus/: Cargo.toml
crates/bus/src/: codecs.rs  lib.rs  pubsub.rs  rpc.rs
crates/discover/: Cargo.toml
crates/discover/src/: lib.rs
crates/domain/: Cargo.toml
crates/domain/src/: lib.rs
crates/ipc/: Cargo.toml
crates/ipc/src/: lib.rs
crates/presence/: Cargo.toml
crates/presence/src/: lib.rs
crates/proto/: Cargo.toml  README.md  build.rs
crates/proto/schema/: message.capnp
crates/proto/src/: lib.rs
crates/rate/: Cargo.toml
crates/rate/src/: lib.rs
crates/rooms/: Cargo.toml
crates/rooms/src/: lib.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs
data/: admin_dedupe_backup_20250826082947.json  auth_login.json  auth_signup.json  db.redb
data/messages/: smoke-test.ndjson
docker/: Cargo.gateway-workspace.toml  gateway.Dockerfile  gateway.dev.Dockerfile  web.Dockerfile
scripts/: auth-smoke.ps1  bus-rpc-ipc-smoke.ps1  bus-rpc-nng-smoke.ps1  bus-rpc-zmq-smoke.ps1  check-auth-debug.cjs  check_braces.py  check_gateway_health.ps1  check_web5173.ps1  create_crates.ps1  dev-all.js  dev-env.js  dev-nohmr.js  docker-cache-prune.mjs  ensure_and_launch.ps1  gateway-debug.ps1  gateway-rate-smoke.ps1  gateway-smoke.ps1  gen-vapid-and-wire.mjs  ipc-rpc-shm-smoke.ps1  kill_port_5174.ps1  launch-lynx.js  mkcert-lan.mjs  presence-smoke.ps1  prod-all.js  regen-mkcert-hosts.mjs  run_web_e2e_with_health.ps1  setup-profile.ps1  start-gateway.js  start-web-dev.ps1  stop-web-dev.ps1  wait-and-launch.js  wait_gateway_health.ps1  web-dev.ps1  windows-open-ports.ps1  write-public-ip-env.mjs  ws-smoke-local.ps1  ws-smoke.ps1
tokens/: Cargo.toml  generator.rs  tokens.json
tokens/src/: main.rs
traefik/: dynamic.yml
(+21 files in other folders)
