[workspace]
resolver = "2"
members = [
  "crates/proto",
  "crates/domain",
  "crates/bus",
  "crates/ipc",
  "crates/rooms",
  "crates/presence",
  "crates/storage",
  "crates/discover",
  "crates/auth",
  "crates/rate",
  "apps/gateway",
  "apps/push-worker",
  "apps/mobile",
  "apps/desktop"
]

# Centralized dependency versions for workspace crates.
# This stabilizes versions across the monorepo. Individual crates should
# reference these with `foo = { workspace = true }`.
[workspace.dependencies]
axum = "0.8.4"
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros", "net", "fs", "sync"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
uuid = "1.18.0"
futures-util = "0.3.31"
anyhow = "1.0.99"
hyper = "1.7.0"
tower = "0.5.2"
capnp = "0.21.4"
base64 = "0.22.1"
parking_lot = "0.12.4"
nng = "1.0.1"
zmq = "0.10.0"
interprocess = "2.2.3"
ipc = "0.2.0"
webauthn-rs = "0.5.2"
oauth2 = "5.0.0"
axum-login = "0.18.0"
tower-sessions = "0.14.0"
redb = "3.0.1"

[patch.crates-io]
storage = { path = "crates/storage" }
