[package]
name = "desktop_app"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros"] }
tauri = "2.8.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
once_cell = "1.21.3"

# Local workspace crate providing auth/session logic
auth = { path = "../../crates/auth" }

[build-dependencies]
tauri-build = "2.4.0"
