[package]
name = "gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true, features = ["ws", "tokio"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "net", "fs", "signal"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
uuid = { workspace = true }
futures-util = { workspace = true }
anyhow = { workspace = true }
hyper = { workspace = true, features = ["server"] }
tower = { workspace = true }
http-body-util = "0.1.3"
bytes = "1.10.1"
axum-server = { version = "0.7.2", default-features = false, features = ["rustls"] }
axum-extra = { version = "0.10.1", features = ["cookie"] }
argon2 = "0.5.3"
password-hash = { version = "0.5.0", features = ["getrandom"] }
rand = "0.9.2"
getrandom = "0.3.3"
tower-http = { version = "0.6.6", features = ["trace", "cors", "compression-br", "compression-gzip", "timeout"] }
time = "0.3.43"

# Local workspace crates
bus = { path = "../../crates/bus" }
storage = { path = "../../crates/storage" }
rooms = { path = "../../crates/rooms" }
presence = { path = "../../crates/presence" }
auth = { path = "../../crates/auth" }
rate = { path = "../../crates/rate" }
chrono = "0.4.41"
url = "2.5.7"
