[package]
name = "auth"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
jsonwebtoken = "9.3.1"
time = "0.3.41"
axum = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
async-trait = "0.1.89"
percent-encoding = "2.3.2"
base64 = { workspace = true }
uuid = { workspace = true }
reqwest = { version = "0.12.23", features = ["json"] }
rand = "0.9.2"
sha2 = "0.10.9"
url = "2.5.7"

# Storage & optional auth integrations
storage = { path = "../storage" }
oauth2 = { workspace = true, optional = true, features = ["reqwest"] }
webauthn-rs = { workspace = true, optional = true }
axum-login = { workspace = true, optional = true }
tower-sessions = { workspace = true, optional = true }

[features]
default = []
with-oauth = ["oauth2"]
with-webauthn = ["webauthn-rs"]
with-axum-login = ["axum-login", "tower-sessions"]
