[package]
name = "ipc"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.99"
interprocess = { workspace = true, optional = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time", "sync"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[features]
default = []
with-interprocess = ["interprocess"]
